2007-07-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib_bookmarkfile.c: fix to compile on ruby 1.9:
	  RSTRING(v)->ptr -> RSTRING_PTR(v),
	  RSTRING(v)->len -> RSTRING_LEN(v).

	* test/test_glib2.rb: add some tests.

	* src/rbbutil.h: change G_PROTECT_CALLBACK() to support calling
	from non-ruby thread.

	* src/rbgutil.c: move rbgutil_protect() into utils_callback.c.

	* src/rbgobj_closure.c: separate stuffs that relate to thread into
	utils_callback.c.

	* src/utils_callback.c: new file for callback invocation.

2007-07-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_boxed.c (rbgobj_boxed_get): type check should be done
	before doing Data_Get_Struct().

2007-07-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_boxed.c (rbgobj_boxed_get): fix argument type to match 
	with its prototype. Repored by Guillaume Cottenceau.
	[ruby-gnome2-devel-en] HEAD doesn't build

2007-07-04  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/global.h, src/rbglib.h, src/rbgobj_boxed.c, src/rbgobj_closure.c,
	src/rbgobj_enums.c, src/rbgobj_object.c, src/rbgobj_param.c, 
	src/rbgobj_typeinstance.c, src/rbgutil.c, src/rbgutil.h, extconf.rb:
	remove ruby-1.6.x support and old yarv support.

2007-07-02  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib_spawn.c, src/rbgobj_object.c, src/rbgobj_signal.c,
	src/rbgobj_type.c, src/rbgobj_typemodule.c, src/rbgobject.c:
	remove unnecessary StringValue() invocations.

2007-07-01  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_typeinterface.c: brush up and should not call
	g_type_default_interface_ref(G_TYPE_INTERFACE) which causes SEGV.

2007-06-28  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* tests/test_glib2.rb (TestGLib#test_signal_handler_disconnect_and_gc):
	new test.

2007-06-23  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_closure.c: detach closure->rb_holder from GObject
	when the closure is invalidated.
	[ruby-gnome2-devel-en] Signal handling causes memory leaks
