@@ -1,5 +1,7 @@
 2007-07-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
+	* src/rbgobj_strv.c (strv_from_ruby): fix not to double free.
+
 	* src/rbglib_bookmarkfile.c: fix to compile on ruby 1.9:
 	  RSTRING(v)->ptr -> RSTRING_PTR(v),
 	  RSTRING(v)->len -> RSTRING_LEN(v).
